--- a/achievements.html
+++ b/achievements.html
@@ -54,7 +54,7 @@
       </ul>  
     </nav>
         
-        <a href=#top id="back">^</a>    
+        <a href=#top id="back">↑</a>     
 
 
     </body>
