--- a/works.html
+++ b/works.html
@@ -155,7 +155,7 @@
       </ul>  
     </nav>
     
-        <a href=#top id="back">^</a>          
+        <a href=#top id="back">↑</a>           
         
    
     </body>
