--- a/workexpanded.html
+++ b/workexpanded.html
@@ -58,12 +58,12 @@
     <iframe id="iframe_container" class="workexpanded" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" width="550" height="400" src="https://prezi.com/embed/fydso8olobix/?bgcolor=ffffff&amp;lock_to_path=0&amp;autoplay=0&amp;autohide_ctrls=0&amp;landing_data=bHVZZmNaNDBIWnNjdEVENDRhZDFNZGNIUE1JMU8wbm1nWGpldGhvcmFEaE1EV3dEN1VzTkcwSCszdENlSWRsaQ&amp;landing_sign=bk-fIsDTfBlflvNkRpf4QX1o5CHpH9DSyr9AxPZQcX0"></iframe>
     <h3>Spring 2016</h3>
     <p>For this project, we teamed up with the Spanish classes and created a tourist/travel website using the research they compiled of their chosen country. The country we were given was Chile.</p>
-    <p>Lorem ipsum dolor sit amet, ne nobis invenire est, ea dolore efficiendi suscipiantur eam, usu in quando admodum consetetur. Sed quot fuisset mediocritatem et, sumo luptatum reprehendunt ex vix. Vero qualisque vix cu, esse denique quaestio has ut, nullam ponderum te sed. Sea vocent percipit ex, alii eleifend volutpat vim ex. In possit prodesset consetetur nam. Ex vis quando propriae, no verear scaevola forensibus vix, eirmod legimus consequat ut vis.</p>          
+    <p>I'm really proud of how the final product turned out. Although we were not able to incorporate everything we had planned, we were able to design it in a way that was aesthetically pleasing, user-friendly, and informative. This was also our first experience with usability testing.</p>          
         
     <h2 id="portfolio">Portfolio</h2>
     <h3>Winter 2015</h3>
-    <p>Lorem ipsum dolor sit amet, ne nobis invenire est, ea dolore efficiendi suscipiantur eam, usu in quando admodum consetetur. Sed quot fuisset mediocritatem et, sumo luptatum reprehendunt ex vix. Vero qualisque vix cu, esse denique quaestio has ut, nullam ponderum te sed. Sea vocent percipit ex, alii eleifend volutpat vim ex. In possit prodesset consetetur nam. Ex vis quando propriae, no verear scaevola forensibus vix, eirmod legimus consequat ut vis.</p>
-    <p>Lorem ipsum dolor sit amet, ne nobis invenire est, ea dolore efficiendi suscipiantur eam, usu in quando admodum consetetur. Sed quot fuisset mediocritatem et, sumo luptatum reprehendunt ex vix. Vero qualisque vix cu, esse denique quaestio has ut, nullam ponderum te sed. Sea vocent percipit ex, alii eleifend volutpat vim ex. In possit prodesset consetetur nam. Ex vis quando propriae, no verear scaevola forensibus vix, eirmod legimus consequat ut vis.</p>        
+    <p>In my sophomore year, we had taken an in-depth approach to learning HTML and CSS by creating our first portfolios. We learned many different techniques through this, such as embedding videos and images, styling a nav with css, and whatnot.</p>
+    <p>Looking back at my first portfolio, I can tell that I've definitely improved, both coding-wise and design-wise.</p>        
         </div>
         </section>
         
