--- a/capstone.html
+++ b/capstone.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Liane Cabrera: Portfolio</title>
+		<title>Liane Cabrera</title>
 		<link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
         <link rel="icon" type="image/png" href="assets/images/favicon.png">
 	</head>
