--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <header>
             <div class="hero">
                 <h1>Liane Cabrera</h1>
-                <span>web + graphic design</span>
+                <span>Web &amp; Graphic Design</span>
             </div>
         </header>
     <section class="content">
     <div class="separate"><h1>Welcome</h1>
-    <p>My name is Liane Cabrera and I am a web designer and graphic designer based in Las Vegas, Nevada. I am currently a junior attending Southwest Career and Technical Academy studying Web Design and Development.</p>
+    <p>My name is Liane Cabrera and I am a web and graphic designer based in Las Vegas, Nevada. I am currently a junior attending Southwest Career and Technical Academy studying Web Design and Development.</p>
     <p>I have been pursuing my interest web design for 6 years now, ever since my first experience of coding in middle school. It has been a slow and steady process, but endlessly rewarding in the skills I have picked up and continue to use.</p>
     <p>My love for drawing has also made graphic design another interest of mine, and opening myself up to the digital world of design has helped me improve and renow my passion for design and my goal is to only continue moving forward in learning and developing myself and my work.</p>
     </div>
@@ -31,12 +31,10 @@
         <li><a title="Resume" href="resume.html">Resume</a></li>
         <li><a title="Capstone" href="capstone.html">Capstone</a></li>
       </ul>  
-    </nav>
-        
-   
+    </nav>  
     </body>
 </html>
-        <a href=#top id="back">↑</a>   
+    
 
 
 
